chore: fixed overflow behaviour

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,5 +85,9 @@
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
 }
 
